--- a/README.org
+++ b/README.org
@@ -3,3 +3,20 @@
 [[https://github.com/d12frosted/d12frosted.io/workflows/CI/badge.svg][file:https://github.com/d12frosted/d12frosted.io/workflows/CI/badge.svg]]
 
 Personal site.
+
+** Building
+
+You need to install [[https://docs.haskellstack.org/en/stable/README/][stack]] (for building Haskell code) and [[https://yarnpkg.com/lang/en/][yarn]] (for downloading
+javascript libraries).
+
+#+begin_src bash
+  $ make build
+#+end_src
+
+** Running site locally
+
+Just run the following command and open http://localhost:8000/
+
+#+begin_src bash
+  $ make watch
+#+end_src
