allow to forcefully disable publishing of post

--- a/posts/2020-01-20-predicate-composition.org
+++ b/posts/2020-01-20-predicate-composition.org
@@ -2,6 +2,7 @@
 title: Predicate composition
 tags: haskell, semigroup, performance
 description: Combinators for predicate composition
+publish: false
 ---
 
 They say functional programming has many essences and the composition is one of
