--- a/assets/about.org
+++ b/assets/about.org
@@ -1,5 +1,6 @@
-Welcome to my personal site, where I irregularly post technical notes, usually
-[[https://www.gnu.org/software/emacs/][Emacs]] or [[https://haskell-lang.org/][Haskell]]-related. I am developer at [[https://wix.com/][Wix]] during the daytime, and
-developer at home before and after the daytime. When I am not writing code, I am
-either drinking wine or drinking tea (with these little cups). Cheese is my
-bread and tracking everything in Emacs is my cheese. So welcome!
+I grow under the sun. When I am not writing code, I am either drinking wine or
+drinking tea (with these little cups). Cheese is my bread and tracking
+everything in Emacs is my cheese.
+
+P.S. d12frosted means dice with 12 sides from the Chessex™ frosted series. I
+used to play. Just a little bit.
