--- a/posts/2020-06-24-task-management-with-roam-vol2.org
+++ b/posts/2020-06-24-task-management-with-roam-vol2.org
@@ -1,7 +1,7 @@
 ---
 title: "Task management with org-roam Vol. 2: Categories"
 tags: emacs, org-roam, org-mode
-description: "Moving tasks to org-roam"
+description: "Automatic category extraction from org-roam"
 publish: true
 ---
 
