2017-07-30-block-templates-in-org-mode: silly ending

--- a/posts/2017-07-30-block-templates-in-org-mode.org
+++ b/posts/2017-07-30-block-templates-in-org-mode.org
@@ -53,3 +53,5 @@ so it's better to refer to the official documentation.
 | =A= | =#+ASCII:=                          |
 | =i= | =#+INDEX: line=                     |
 | =I= | =#+INCLUDE: line=                   |
+
+That's it.
