--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -67,7 +67,7 @@ This might look a little bit too much, so let me explain the code step by step.
    we ask it to return only them by passing a =GRANULARITY= parameter -
    ='headline=. This makes things faster.
 2. Then we extract information about =TODO= keyword from =headline= AST, which
-   [[https://orgmode.org/worg/dev/org-element-api.html#org658999f][contains a propertie]] we are interested in - =:todo-type=, which returns the
+   [[https://orgmode.org/worg/dev/org-element-api.html#org658999f][contains a property]] we are interested in - =:todo-type=, which returns the
    type of =TODO= keyword according to =org-todo-keywords= - ='done=, ='todo= or
    =nil= (when keyword is not present).
 3. Now all we have to do is to check if this list contains at least one keyword
